force-app/main/default/objects/OrderItemSummary/fields/AVA_B2BLEX__Vat_Code__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Vat_Code__c</fullName>
    <inlineHelpText>The VAT code returned by AvaTax that was applied to the line item.</inlineHelpText>
    <label>Vat Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>