force-app/main/default/objects/OrderItemSummary/fields/Individual_Membership_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Membership_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for Previous Individual Membership Assignment</description>
    <inlineHelpText>Lookup for Previous Individual Membership Assignment</inlineHelpText>
    <label>Individual Membership Assignment</label>
    <referenceTo>Account_Membership__c</referenceTo>
    <relationshipLabel>Order Product Summaries</relationshipLabel>
    <relationshipName>Order_Product_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>