force-app/main/default/objects/OrderItemSummary/fields/Practice_Level_Membership_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Practice_Level_Membership_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous Practice Membership Assignment used for renewal</description>
    <inlineHelpText>Previous Practice Membership Assignment used for renewal</inlineHelpText>
    <label>Practice Level Membership Assignment</label>
    <referenceTo>Practice_Level_Membership_Assignment__c</referenceTo>
    <relationshipLabel>Order Product Summaries</relationshipLabel>
    <relationshipName>Order_Product_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>