force-app/main/default/objects/OrderItemSummary/fields/Refund_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Refund_Quantity__c</fullName>
    <label>Refund Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>