force-app/main/default/objects/OrderItemSummary/fields/Renewed_ILMA__c.field-meta.xml
<CustomField>
    <fullName>Renewed_ILMA__c</fullName>
    <formula>Individual_Membership_Assignment__r.Renewed_Membership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed ILMA</label>
    <type>Text</type>
</CustomField>